Exploration on location data, in particular on percentages of uncensored data

--- a/Notebooks/JBI100_Data_Exploration.ipynb
+++ b/Notebooks/JBI100_Data_Exploration.ipynb
@@ -223888,6 +223888,69 @@
     "print(\"\\nRows per year:\")\n",
     "print(yearly_counts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          available_entries  total_entries  completion_percentage\n",
+      "STATE              220087.0       220087.0                 100.00\n",
+      "COUNTY             216467.0       220087.0                  98.36\n",
+      "Latitude            65518.0       220087.0                  29.77\n",
+      "Longitud            65534.0       220087.0                  29.78\n",
+      "STATION            219823.0       220087.0                  99.88\n",
+      "STCNTY             220079.0       220087.0                 100.00\n",
+      "GXID                11570.0       220087.0                   5.26\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analyze_location_data(df):\n",
+    "    # List of location columns to analyze\n",
+    "    location_columns = [\n",
+    "        'STATE', 'COUNTY', 'Latitude', 'Longitud',\n",
+    "        'STATION', 'STCNTY', 'GXID'\n",
+    "    ]\n",
+    "\n",
+    "    # Calculate completion stats\n",
+    "    stats = {}\n",
+    "    total_rows = len(df)\n",
+    "\n",
+    "    for col in location_columns:\n",
+    "        if col in df.columns:\n",
+    "            non_null = df[col].notna().sum()\n",
+    "            percentage = (non_null / total_rows) * 100\n",
+    "            stats[col] = {\n",
+    "                'available_entries': non_null,\n",
+    "                'total_entries': total_rows,\n",
+    "                'completion_percentage': round(percentage, 2)\n",
+    "            }\n",
+    "\n",
+    "            # Additional validation for lat/long\n",
+    "            if col in ['LATITUDE', 'LONGITUDE']:\n",
+    "                valid_range = {\n",
+    "                    'LATITUDE': (-90, 90),\n",
+    "                    'LONGITUDE': (-180, 180)\n",
+    "                }\n",
+    "                valid_coords = df[\n",
+    "                    (df[col].notna()) &\n",
+    "                    (df[col].between(*valid_range[col]))\n",
+    "                ].shape[0]\n",
+    "                stats[col]['valid_coordinates'] = valid_coords\n",
+    "                stats[col]['valid_percentage'] = round(\n",
+    "                    (valid_coords / total_rows) * 100, 2)\n",
+    "\n",
+    "    return stats\n",
+    "\n",
+    "\n",
+    "stats = analyze_location_data(df_railroad)\n",
+    "print(pd.DataFrame(stats).T)"
+   ]
   }
  ],
  "metadata": {
